Fixed Sidenav Float property style on mobile version.

--- a/gwt-material/src/main/resources/gwt/material/design/public/css/overridecss.css
+++ b/gwt-material/src/main/resources/gwt/material/design/public/css/overridecss.css
@@ -879,8 +879,8 @@ footer.fixed{
 @media screen and (max-width: 894px) {
 	.side-nav.card, .side-nav.float {
 		margin: 0;
-		top: 0;
-		left: 0;
+		top: 0 !important;
+		left: 0 !important;
 		height: 100%;
 		background: #fff;
 	}
